# reference_integration

./: .bazelrc  .gitignore  MODULE.bazel  README.md  known_good.json  versions.json
.github/: CODEOWNERS
.github/workflows/: build_and_test_autosd.yml  build_and_test_ebclfsa.yml  build_and_test_linux.yml  build_and_test_qnx.yml  build_autosd_lola.yml  codeql-multiple-repo-scan.yml  test_and_docs.yml
bazel_common/: score_basic_bazel.MODULE.bazel  score_gcc_toolchains.MODULE.bazel  score_images.MODULE.bazel  score_modules_tooling.MODULE.bazel
images/autosd_x86_64/: BUILD.bazel
main/: index.html  needs.json  schema_violations.json  searchindex.js
main/_collections/score_docs_as_code/docs/: index.html
main/_collections/score_docs_as_code/docs/concepts/: bidirectional_traceability.html  index.html
main/_collections/score_docs_as_code/docs/how-to/: index.html  other_modules.html  setup.html  source_to_doc_links.html  test_to_doc_links.html  write_docs.html
main/_collections/score_docs_as_code/docs/internals/: benchmark_results.html  index.html
main/_collections/score_docs_as_code/docs/reference/: bazel_macros.html  index.html
main/_collections/score_logging/docs/: index.html
main/_collections/score_logging/docs/design_decisions/: explicit_init.html
main/_collections/score_platform/docs/: index.html
main/_collections/score_platform/docs/contribute/: index.html
main/_collections/score_platform/docs/design_decisions/: DR-001-infra.html  DR-002-infra.html  DR-003-infra.html  DR-004-infra.html  DR-006-infra.html  DR-007-infra.html  index.html
main/_collections/score_platform/docs/handbook/: index.html
main/_collections/score_platform/docs/introduction/: index.html
main/_collections/score_platform/docs/platform_management_plan/: change_management.html  config_management.html  documentation_management.html  index.html  problem_resolution.html  project_management.html  quality_management.html  release_management.html  safety_management.html  security_management.html  software_development.html  software_verification.html  tool_management.html
main/_collections/score_platform/docs/requirements/: index.html
main/_collections/score_platform/docs/score_tools/: bazel.html  clippy.html  doc_as_code.html  gtest.html  index.html  itf.html  rustfmt.html  score_tools_evaluation_list.html
main/_collections/score_process/process/: index.html
main/_collections/score_process/process/folder_templates/: index.html
main/_collections/score_process/process/general_concepts/: index.html  score_building_blocks_concept.html  score_lifecycle_concept.html  score_review_concept.html  score_traceability_concept.html
main/_collections/score_process/process/introduction/: index.html
main/_collections/score_process/process/process_areas/: index.html
main/_collections/score_process/process/roles/: index.html
main/_collections/score_process/process/standards/: index.html
main/_collections/score_process/process/trustable/: index.html
main/_collections/score_process/process/workflows/: index.html
main/_collections/score_process/process/workproducts/: index.html
main/place_holder/: communication.html  persistency.html
main/verification/: coverage_summary.html  unit_test_summary.html  verification.html
pr-1/: genindex.html  needs.json  schema_violations.json  search.html  searchindex.js
pr-1/_collections/score_docs_as_code/docs/concepts/: docs_deps.html
pr-1/_collections/score_docs_as_code/docs/how-to/: faq.html  get_started.html  other_modules.html  test_to_doc_links.html
pr-1/_collections/score_docs_as_code/docs/internals/: benchmark_results.html  index.html
pr-1/_collections/score_docs_as_code/docs/reference/: bazel_macros.html  commands.html
pr-1/_collections/score_platform/docs/contribute/: index.html
pr-1/_collections/score_platform/docs/design_decisions/: DR-001-infra.html  DR-002-infra.html  DR-003-infra.html  DR-004-infra.html  DR-006-infra.html  DR-007-infra.html
pr-1/_collections/score_platform/docs/features/: index.html
pr-1/place_holder/: orchestrator.html
pr-1/verification/: coverage_summary.html  verification.html
pr-2/: genindex.html  index.html  needs.json  schema_violations.json  search.html  searchindex.js
pr-2/_collections/score_baselibs/docs/: index.html
pr-2/_collections/score_baselibs_rust/docs/: index.html
pr-2/_collections/score_docs_as_code/docs/: index.html
pr-2/_collections/score_kyron/docs/: index.html
pr-2/_collections/score_logging/docs/: index.html
pr-2/_collections/score_orchestrator/docs/: index.html
pr-2/_collections/score_persistency/docs/: index.html
pr-2/_collections/score_platform/docs/: index.html
pr-2/_collections/score_process/process/: index.html
pr-2/verification/: coverage_summary.html  unit_test_summary.html  verification.html
pr-3/: needs.json  schema_violations.json  searchindex.js
pr-3/_collections/score_baselibs/docs/: index.html
pr-3/_collections/score_logging/docs/: index.html
pr-3/verification/: coverage_summary.html  unit_test_summary.html
pr-4/: needs.json  schema_violations.json  search.html
pr-4/_collections/score_logging/docs/: index.html
pr-4/_collections/score_platform/docs/: index.html
pr-4/verification/: coverage_summary.html
pr-5/: needs.json  schema_violations.json  searchindex.js
pr-5/_collections/score_kyron/docs/: index.html
pr-5/_collections/score_logging/docs/: index.html
pr-5/verification/: coverage_summary.html
pr-6/: genindex.html  needs.json  schema_violations.json  searchindex.js
pr-6/_collections/score_logging/docs/: index.html
pr-6/verification/: coverage_summary.html
pr-7/: index.html  needs.json  schema_violations.json  searchindex.js
pr-7/_collections/score_baselibs_rust/docs/: index.html
pr-7/_collections/score_logging/docs/: index.html
pr-7/_collections/score_orchestrator/docs/: index.html
pr-7/_collections/score_persistency/docs/: index.html
pr-7/verification/: coverage_summary.html
scripts/known_good/: update_module_from_known_good.py
scripts/known_good/models/: known_good.py
(+4611 files in other folders)
