bazel_dep(name = "rules_oci", version = "1.8.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "ubuntu_22_04",
    digest = "sha256:3ba65aa20f86a0fad9df2b2c259c613df006b2e6d0bfcc8a146afb8c525a9751",
    image = "ubuntu",
    platforms = ["linux/amd64"],
    tag = "22.04",
)

oci.pull(
    name = "autosd10",
    digest = "sha256:7e78bedb5368daec66c8f2f5fe6fea29b88f35605415034e7d2cede80a62369b",
    image = "ghcr.io/odra/os_images/score-autosd",
    platforms = ["linux/amd64"],
    tag = "latest-qemu-amd64",
)

use_repo(oci, "autosd10", "ubuntu_22_04")
