# *******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_rpm//:defs.bzl", "rpm_package")

alias(
    name = "image",
    actual = "//showcases:showcases_all",
    visibility = ["//visibility:public"],
)

rpm_package(
    name = "score-showcases",
    description = "Eclipse S-CORE Reference Integration Showcases",
    summary = "Eclipse S-CORE Reference Integration Showcases",
    version = "0.6.0",
    data = [
        "//showcases:showcases_all"
    ],
    data_dir = "/usr/share/score/examples", 
)

# rpm_package(
#     name = "score-reference-integration",
#     description = "Eclipse S-CORE Reference Integration",
#     summary = "Eclipse S-CORE Reference Integration",
#     version = "0.6.0",
#     binaries = [
#         "//showcases/cli:cli",
# 	"//showcases/kyron:kyron_example",
# 	"//showcases/orchestration_persistency:orch_per_example",
#     ],
#     config_dir = "/etc/score",
#     data = [
#         "//showcases/kyron:kyron.score.json",
# 	"//showcases/orchestration_persistency:orch_per.score.json"
#     ],
#     data_dir = "/usr/share/score/examples", 
# )

sh_binary(
    name = "run",
    srcs = ["//runners/docker_x86_64/scripts:run_docker.sh"],
    env={
    	"OCI_IMAGE": "quay.io/centos/centos:stream10"
    },
    args = [
        "$(location :image)",
    ],
    data = [
        ":image",
    ],
)
