load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

# *******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_rpm//:defs.bzl", "rpm_package")

rpm_package(
    name = "score-showcases",
    data = [
        "//showcases",
    ],
    data_dir = "/usr/share/score/examples",
    description = "Eclipse S-CORE Reference Integration Showcases",
    summary = "Eclipse S-CORE Reference Integration Showcases",
    version = "0.6.0",
)

sh_binary(
    name = "run",
    srcs = ["//runners/docker_x86_64/scripts:run_docker.sh"],
    args = [
        "$(location :image_tarball)",
    ],
    data = [
        ":image_tarball",
    ],
    env = {
        "OCI_IMAGE": "score_showcases_autosd:latest",
    },
)

oci_image(
    name = "image",
    base = "@autosd10",
    tars = [
        "//showcases:showcases_pkg_tar",
    ],
)

oci_tarball(
    name = "image_tarball",
    image = ":image",
    repo_tags = ["score_showcases_autosd:latest"],
    visibility = [
        "//feature_integration_tests/itf:__pkg__",
    ],
)
